--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+server.port=5174
+spring.thymeleaf.cache=false
 
+#data source
+spring.datasource.url=jdbc:mysql://localhost:3306/java_fotoalbum
+spring.datasource.username=root
+spring.datasource.password=root
+#comportamento hibernate
+spring.jpa.hibernate.ddl-auto =create
+
+#solo development
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+#Date time formatting
+spring.mvc.format.date=yyyy-MM-dd
+spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
+spring.mvc.format.time=HH:mm:ss
+
+spring.security.filter.dispatcher-types=request
