--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "sass": "^1.63.6",
     "vue": "^3.3.4"
   },
   "devDependencies": {
