--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,12 @@
 			<artifactId>bootstrap</artifactId>
 			<version>5.3.0</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-core</artifactId>
+            <version>10.1.10</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
