--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,6 @@ spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
 spring.mvc.format.time=HH:mm:ss
 
 spring.security.filter.dispatcher-types=request
+
+spring.servlet.multipart.maxFileSize= 10MB
+spring.servlet.multipart.maxRequestSize= 10MB
